<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_addbook_black_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_get"
        android:icon="@drawable/ic_getbyid_black_24dp"
        android:title="@string/title_getbyid" />

</menu>
